Fix side scroll width on mobile and theme changes

--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,7 @@ body {
   justify-content: flex-start;
   overflow-x: auto;
   overflow-y: hidden;
+  max-width: 100vw;
 }
 
 .result-switch button {
@@ -213,7 +214,7 @@ body {
 .bottom-bar {
   width: 100%;
   height: 60px;
-  background-color: #151515;
+  background-color: #f5f5f5;
   position: fixed;
   bottom: 0;
   text-align: center;
@@ -223,7 +224,8 @@ body {
 
 .bottom-bar-button {
   text-align: center;
-  color: #b0b0b0;
+  color: #ff9900;
+  transition: color 1s;
   cursor: pointer;
 }
 
